syntax = "proto3";

package role.v1;

import "common/v1/common.proto";
import "google/api/annotations.proto";
import "role/v1/role_gorm.proto";

service RoleService {
    rpc GetRoleList(GetRoleListRequest) returns (GetRoleListResponse) {
        option (google.api.http) = {get: "/v1/roles"};
    }
}

message GetRoleListRequest {}

message GetRoleListResponse {
    repeated Role roles = 1;
    common.v1.StandardResponse http_status = 2;
}
